<resources>
    <string name="app_name">Parkuy</string>
    <string name="titleDaftar">Daftar</string>
    <string name="daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="lanjut">Lanjut</string>
    <string name="masuk">Masuk</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nama">Nama</string>
    <string name="nama_tempat_parkir">Nama Tempat Parkir</string>
    <string name="alamat_parkir">Alamat Parkir</string>
    <string name="title_activity_search_bar">SearchBar</string>
</resources>
